@@ -598,6 +598,12 @@ Default: *dash*
 Hide the scrollbar\.
 .
 .P
+\fB\-scrollbar\-width\fR \fIwidth\fR
+.
+.P
+Set the scrollbar width\.
+.
+.P
 \fB\-glob\fR
 .
 .P
